# bot-agents-backup

./: .gitignore  indian_calendar_data.py  list_agents.py
cloud-functions/: .firebaserc  .gitignore  botEngagement.js  firebase.json  index.js  package-lock.json  package.json
dhyanapp-content-agent/: .gitignore  Developer_Readme.md  README.md  auto_quote_service.py  bot_accounts.json  bot_personas_store.py  calendarific_service.py  engagement_service.py  festival_history_manager.py  festival_post_scheduler.py  firestore_service.py  gita_post_generator.py  gita_post_state.json  image_generator_service.py  llm_usage_tracker.py  magazine_article_generator.py  magazine_article_state.json  magazine_post_generator.py  magazine_post_state.json  managed_urls.json  persona_post_generator.py  persona_quote_generator.py  pyproject.toml  quote_generator_service.py  quote_rotation_state.json  rotation_state.json  run_daily_quote.sh  run_festival_posts.sh  run_gita_post.sh  run_magazine_article.sh  run_magazine_post.sh  run_persona_posts.sh  run_persona_quotes.sh  run_scripture_post.sh  run_youtube_posts.sh  scheduler_service.py  scripture_post_generator.py  scripture_post_state.json  streamlit_app.py  test_image_variants.py  (+5 more)
dhyanapp-content-agent/festival_data/: custom_topics.json  posted_history.json
dhyanapp-content-agent/scripts/: migrate_bot_accounts_to_mongo.py  smoke_all_gita_styles.py  smoke_few_gita_styles.py  smoke_few_gita_styles_results.json  sync_artist_names_from_creators.py
docs/: README.md  bot-personas.md  commenting-workflow.md  firestore-schema.md  (+3 more)
