[project]
name = "dhyanapp-content-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-search-results>=2.4.2",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "chromadb>=0.4.0",
    "streamlit>=1.30.0",
    "firebase-admin>=6.4.0",
    "apscheduler>=3.10.0",
    "langchain-chroma>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "pillow>=12.1.0",
    "pymongo>=4.16.0",
    "boto3>=1.42.79",
]
